# ada-data-science-project-ii

./: .gitignore  README.md  data_consistency_analysis.ipynb  mtg_analysis.ipynb  pyproject.toml  requirements.txt
datasets/: get_dataset.py  get_json_dataset.py
