[project]
name = "ada_project_2"
version = "0.1.0"
description = "TO-DO"
readme = "README.md"
requires-python = ">=3.12"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.tox
  | \.venv
  | \.task_dependencies
  | _build
  | buck-out
  | build
  | dist  
)/
'''

[tool.isort]
profile = "black"
line_length = 79